objects/Invoice_Document_Changed__c.object
<CustomObject>
    <description>For recording the reason a invoice document is rejected/approved in a historic table - Bluewolf built - Jerome Fortunado Requested</description>
    <fields>
        <fullName>Document_Submitted__c</fullName>
        <description>Submitted Date of document - For the Invoice Document Status Change Project - Bluewolf Created - Jerome Fortunado Requested</description>
        <label>Document Submitted</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Documents__c</fullName>
        <description>Relationship to the Invoice Document - For the Invoice Document Status Change Project - Bluewolf Created - Jerome Fortunado Requested</description>
        <label>Invoice Documents</label>
        <referenceTo>Invoice_Documents__c</referenceTo>
        <relationshipLabel>Invoice Document Changed Reasons</relationshipLabel>
        <relationshipName>Invoice_Document_Changed_Reasons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes_to_Dealer__c</fullName>
        <description>Notes to Dealer (rejected or approved reason) - For the Invoice Document Status Change Project - Bluewolf Created - Jerome Fortunado Requested</description>
        <label>Notes to Dealer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <description>Response Date of status change - For the Invoice Document Status Change Project - Bluewolf Created - Jerome Fortunado Requested</description>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <label>Invoice Document Status Changed Reason</label>
    <nameField>
        <label>Invoice Document Status Changed Reason N</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Document Changed Reasons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>